--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <title>Sky House</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#">
+        <img class="logo" src="img/image.png" alt="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a class="mtavari" href="#">მთავარი</a></li>
+          <li><a href="#">შესახებ</a></li>
+          <li><a href="#">სერვისები</a></li>
+          <li><a href="#">პროექტები</a></li>
+          <li><a href="#">პარტნიორები</a></li>
+          <li><a class="kontaqti" href="#">კონტაქტი</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
