created first image

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <title>Sky House</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="projects">
+      <h2>პროექტები</h2>
+      
+      <article class="first_article">
+        <img class="first_image" src="img/Rectangle 18.png" alt="პირველი სურათი">
+        <p class="first_text">ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში</p>
+      </article>
+    </div>
+  </body>
 </html>
