--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
     <title>Sky House</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="home-container blue">
+        <div class="container">
+          <div class="jumbotron">
+            <img class="left-img" src="img/Rectangle 1-1.png" alt="" />
+            <img class="right-img" src="img/Rectangle 3-1.png" alt="" />
+          </div>
+          <div class="slider">
+            <div class="circles">
+              <div class="white"></div>
+              <div class="lightblue"></div>
+              <div class="lightblue"></div>
+            </div>
+            <div class="arrows">
+              <a href="#">⬅️</a>
+              <a href="#">➡️</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
