fixed content alignment

--- a/index.html
+++ b/index.html
@@ -25,23 +25,25 @@
       </div>
     </header>
     <main>
-      <section class="home-container blue">
-        <div class="jumbotron container">
-          <div>
-            <img class="left-img" src="img/Rectangle 3-1.png" alt="" />
-            <div class="slider">
-              <div class="circles">
-                <div class="white"></div>
-                <div class="lightblue"></div>
-                <div class="lightblue"></div>
-              </div>
-              <div class="arrows">
-                <a href="#">⬅️</a>
-                <a href="#">➡️</a>
+      <section>
+        <div class="home-container blue">
+          <div class="jumbotron container">
+            <div>
+              <img class="img" src="img/Rectangle 3-1.png" alt="" />
+              <div class="slider">
+                <div class="circles">
+                  <div class="white"></div>
+                  <div class="lightblue"></div>
+                  <div class="lightblue"></div>
+                </div>
+                <div class="arrows">
+                  <a href="#">⬅️</a>
+                  <a href="#">➡️</a>
+                </div>
               </div>
             </div>
+            <img class="img" src="img/Rectangle 1-1.png" alt="" />
           </div>
-          <img class="right-img" src="img/Rectangle 1-1.png" alt="" />
         </div>
       </section>
     </main>
