made some changes to style.css and added container to index.html

--- a/index.html
+++ b/index.html
@@ -7,18 +7,32 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-      <main>
-        <section>
-            <div class="container">
+    <main>
+      <section>
+        <div class="container">
+          <div class="content-container">
+            <div class="img-container">
+              <img src="img/Rectangle 20-1.png" alt="photo" />
+            </div>
+            <div class="text-container">
               <h2>სერვისები</h2>
               <p>
-                ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
+                ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია
+                მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს.
+                Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი
+                გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია
+                ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა
+                კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა
+                და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის
+                შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
+                დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის
+                უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+                გამო, ზოგი კი — განზრახ, ხუმრობით.
               </p>
             </div>
-            <div class="container2">
-              <img src="img/Rectangle 20-1.png" alt="foto" class="surati">
-            </div>
-        </section>
-      </main>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
