added containers and updated styles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,48 @@
   </head>
   <body>
     <div class="projects">
-      <h2>პროექტები</h2>
-      
-      <article class="first_article">
-        <img class="first_image" src="img/Rectangle 18.png" alt="პირველი სურათი">
-        <p class="first_text">ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში</p>
-      </article>
+      <div class="container">
+        <h2>პროექტები</h2>
+        <div class="card-container">
+          <article class="card">
+            <img
+              class="first_image"
+              src="img/Rectangle 18.png"
+              alt="პირველი სურათი"
+            />
+            <p class="first_text">
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </article>
+          <article class="card">
+            <img
+              class="first_image"
+              src="img/Rectangle 21.png"
+              alt="პირველი სურათი"
+            />
+            <p class="first_text">
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </article>
+          <article class="card">
+            <img
+              class="first_image"
+              src="img/Rectangle 20.png"
+              alt="პირველი სურათი"
+            />
+            <p class="first_text">
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </article>
+        </div>
+        <div class="other-projects-container">
+          <p class="vertical-line"></p>
+          <p class="other-projects">სხვა პროექტები</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
