--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="other-projects-container">
           <p class="vertical-line"></p>
-          <p class="other-projects">სხვა პროექტები</p>
+          <a class="other-projects" href="#">სხვა პროექტები</a>
         </div>
       </div>
     </div>
