--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sky House</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="#">
-        <img class="logo" src="img/image.png" alt="logo" />
-      </a>
-      <nav>
-        <ul>
-          <li><a class="mtavari" href="#">მთავარი</a></li>
-          <li><a href="#">შესახებ</a></li>
-          <li><a href="#">სერვისები</a></li>
-          <li><a href="#">პროექტები</a></li>
-          <li><a href="#">პარტნიორები</a></li>
-          <li><a class="kontaqti" href="#">კონტაქტი</a></li>
-        </ul>
-      </nav>
-    </header>
+    <main>
+      <section>
+        <div class="container">
+          <div class="content-container">
+            <div class="text-container">
+              <h2>ჩვენ შესახებ</h2>
+              <p>
+                ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია
+                მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს.
+                Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი
+                გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია
+                ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა
+                კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა
+                და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის
+                შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
+                დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის
+                უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+                გამო, ზოგი კი — განზრახ, ხუმრობით.
+              </p>
+              <p>
+                Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო
+                ტექსტია. <a href="#">იგი სტანდარტად 1500-იანი წლებიდან იქცა</a>,
+                როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი
+                ეგზემპლარი დაბეჭდა.
+              </p>
+            </div>
+            <div class="img-container">
+              <img src="img/image4.png" alt="photo" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
