--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <article class="card">
             <img
               class="first_image"
-              src="img/Rectangle 1-1.png"
+              src="img/Rectangle 18.png"
               alt="პირველი სურათი"
             />
             <p class="first_text">
@@ -115,7 +115,7 @@
           <article class="card">
             <img
               class="first_image"
-              src="img/Rectangle 1-1.png"
+              src="img/Rectangle 21.png"
               alt="პირველი სურათი"
             />
             <p class="first_text">
@@ -126,7 +126,7 @@
           <article class="card">
             <img
               class="first_image"
-              src="img/Rectangle 1-1.png"
+              src="img/Rectangle 20.png"
               alt="პირველი სურათი"
             />
             <p class="first_text">
