added fonts to the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sky House</title>
+    <link
+      rel="stylesheet"
+      href="//cdn.web-fonts.ge/fonts/archyedt-bold/css/archyedt-bold.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -45,7 +49,7 @@
             <img class="img" src="img/Rectangle 1-1.png" alt="" />
           </div>
         </div>
-         <div class="container">
+        <div class="container">
           <div class="content-container">
             <div class="text-container">
               <h2>ჩვენ შესახებ</h2>
@@ -75,74 +79,73 @@
           </div>
         </div>
         <div class="container">
-            <div class="content-container">
-              <div class="img-container">
-                <img src="img/Rectangle 20-1.png" alt="photo" />
-              </div>
-              <div class="text-container">
-                <h2>სერვისები</h2>
-                <p>
-                  ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია
-                  მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს.
-                  Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი
-                  გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია
-                  ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა
-                  კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა
-                  და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის
-                  შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
-                  დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის
-                  უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
-                  გამო, ზოგი კი — განზრახ, ხუმრობით.
-                </p>
-              </div>
+          <div class="content-container">
+            <div class="img-container">
+              <img src="img/Rectangle 20-1.png" alt="photo" />
             </div>
+            <div class="text-container">
+              <h2>სერვისები</h2>
+              <p>
+                ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია
+                მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს.
+                Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი
+                გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია
+                ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა
+                კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა
+                და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის
+                შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
+                დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის
+                უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+                გამო, ზოგი კი — განზრახ, ხუმრობით.
+              </p>
+            </div>
+          </div>
         </div>
-          <div class="projects">
-      <div class="container">
-        <h2>პროექტები</h2>
-        <div class="card-container">
-          <article class="card">
-            <img
-              class="first_image"
-              src="img/Rectangle 18.png"
-              alt="პირველი სურათი"
-            />
-            <p class="first_text">
-              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
-              ნომერში
-            </p>
-          </article>
-          <article class="card">
-            <img
-              class="first_image"
-              src="img/Rectangle 21.png"
-              alt="პირველი სურათი"
-            />
-            <p class="first_text">
-              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
-              ნომერში
-            </p>
-          </article>
-          <article class="card">
-            <img
-              class="first_image"
-              src="img/Rectangle 20.png"
-              alt="პირველი სურათი"
-            />
-            <p class="first_text">
-              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
-              ნომერში
-            </p>
-          </article>
+        <div class="projects">
+          <div class="container">
+            <h2>პროექტები</h2>
+            <div class="card-container">
+              <article class="card">
+                <img
+                  class="first_image"
+                  src="img/Rectangle 18.png"
+                  alt="პირველი სურათი"
+                />
+                <p class="first_text">
+                  ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+                  ნომერში
+                </p>
+              </article>
+              <article class="card">
+                <img
+                  class="first_image"
+                  src="img/Rectangle 21.png"
+                  alt="პირველი სურათი"
+                />
+                <p class="first_text">
+                  ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+                  ნომერში
+                </p>
+              </article>
+              <article class="card">
+                <img
+                  class="first_image"
+                  src="img/Rectangle 20.png"
+                  alt="პირველი სურათი"
+                />
+                <p class="first_text">
+                  ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+                  ნომერში
+                </p>
+              </article>
+            </div>
+            <div class="other-projects-container">
+              <p class="vertical-line"></p>
+              <a class="other-projects" href="#">სხვა პროექტები</a>
+            </div>
+          </div>
         </div>
-        <div class="other-projects-container">
-          <p class="vertical-line"></p>
-          <a class="other-projects" href="#">სხვა პროექტები</a>
-        </div>
-      </div>
-    </div>
       </section>
     </main>
   </body>
 </html>
-
